...aaand further work

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Chromium/Google Chrome extension for controlling the browser with gamepad
+Chromium/Google Chrome extension for controlling the browser with a gamepad or
+a Kinect device
+
+Written by Leszek Godlewski <github@inequation.org>
