icons and credit for their creators

--- a/README
+++ b/README
@@ -2,3 +2,9 @@ Chromium/Google Chrome extension for controlling the browser with a gamepad or
 a Kinect device
 
 Written by Leszek Godlewski <github@inequation.org>
+
+Crosshairs Pack for Red Eclipse by fluxord
+http://forum.freegamedev.net/viewtopic.php?f=53&t=1471
+
+Xbox 360 Elite Joypad Icon by Svengraph
+http://svengraph.deviantart.com/art/Xbox-360-Elite-Joypad-Icon-143599757
